--- a/auction/index.html
+++ b/auction/index.html
@@ -10,9 +10,9 @@
     <script src="/auction/public/assets/lib/angular-route/angular-route.min.js"></script>
     <script src="/auction/public/auction/app.js"></script>
     <script src="/auction/public/auction/common/routes.js"></script>
-    <script src="/auction/public/auction/common/service.js"></script>
-    <script src="/auction/public/auction/bidder/controller.js"></script>
-    <script src="/auction/public/auction/auctioneer/directive.js"></script>
-    <script src="/auction/public/auction/auctioneer/controller.js"></script>
+    <script src="/auction/public/auction/common/localStorage.service.js"></script>
+    <script src="/auction/public/auction/bidder/bidder.controller.js"></script>
+    <script src="/auction/public/auction/auctioneer/auctioneer.item.directive.js"></script>
+    <script src="/auction/public/auction/auctioneer/auctioneer.controller.js"></script>
   </body>
 </html>
